--- a/index.html
+++ b/index.html
@@ -3398,6 +3398,16 @@
         animation-delay: calc(0.4s + 4 * 0.1s);
       }
     </style>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-86668820-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-86668820-1');
+</script>
+
   </head>
   <body class="lune">
     <!-- The clipPath is used in the CSS `clip-path` property; it's used to achieve a
