--- a/index.html
+++ b/index.html
@@ -3482,10 +3482,10 @@
             </figure>
             <!-- Dictover CTA -->
             <a
-              href="#"
+              href="https://www.lazada.co.th/shop/kaewseeda"
               class="ampstart-btn ampstart-btn-secondary relative inline-block overflow-hidden caps h7 center lune-anim-move-up z2 lune-theme-light lune-transparent"
             >
-              <span class="relative block z3">Coming Soon</span>
+              <span class="relative block z3">Lazada</span>
             </a>
             <!-- Scroll indicator -->
             <aside
@@ -3552,10 +3552,10 @@
             </figure>
             <!-- Dictover CTA -->
             <a
-              href="#"
+              href="https://shopee.co.th/shop/51324408"
               class="ampstart-btn ampstart-btn-secondary relative inline-block overflow-hidden caps h7 center lune-anim-move-up z2 lune-theme-dark lune-transparent"
             >
-              <span class="relative block z3">เร็วๆ นี้</span>
+              <span class="relative block z3">Shopee</span>
             </a>
             <!-- Scroll indicator -->
             <aside
