--- a/index.html
+++ b/index.html
@@ -3487,6 +3487,12 @@
             >
               <span class="relative block z3">Lazada</span>
             </a>
+            <a
+            href="https://shopee.co.th/shop/51324408"
+            class="ampstart-btn ampstart-btn-secondary relative inline-block overflow-hidden caps h7 center lune-anim-move-up z2 lune-theme-light lune-transparent"
+            >
+              <span class="relative block z3">Shopee</span>
+            </a>
             <!-- Scroll indicator -->
             <aside
               class="lune-component-scroll-indicator caps bold flex flex-column items-center h7 m0 relative"
@@ -3552,11 +3558,17 @@
             </figure>
             <!-- Dictover CTA -->
             <a
-              href="https://shopee.co.th/shop/51324408"
+              href="https://u.jd.co.th/tdCEsi5"
               class="ampstart-btn ampstart-btn-secondary relative inline-block overflow-hidden caps h7 center lune-anim-move-up z2 lune-theme-dark lune-transparent"
             >
-              <span class="relative block z3">Shopee</span>
+              <span class="relative block z3">JD Central</span>
             </a>
+            <a
+              href="https://www.amway.co.th/mylist/HealthAndWellness"
+              class="ampstart-btn ampstart-btn-secondary relative inline-block overflow-hidden caps h7 center lune-anim-move-up z2 lune-theme-dark lune-transparent"
+            >
+              <span class="relative block z3">Health & Wellness</span>
+            </a>            
             <!-- Scroll indicator -->
             <aside
               class="lune-component-scroll-indicator caps bold flex flex-column items-center h7 m0 relative"
