--- a/index.html
+++ b/index.html
@@ -3482,7 +3482,7 @@
             </figure>
             <!-- Dictover CTA -->
             <a
-              href="https://www.lazada.co.th/shop/kaewseeda"
+              href="https://pages.lazada.co.th/wow/i/th/marketing/ams_lp?hybrid=1&campaignId=111"
               class="ampstart-btn ampstart-btn-secondary relative inline-block overflow-hidden caps h7 center lune-anim-move-up z2 lune-theme-light lune-transparent"
             >
               <span class="relative block z3">Lazada</span>
