--- a/index.html
+++ b/index.html
@@ -3433,7 +3433,7 @@
             class="lune-landing-section-wrapper absolute top-0 left-0 bottom-0 right-0 flex flex-column items-center justify-between"
           >
             <!-- Used by screen reader / document outline, not visible -->
-            <h2 class="hide">Welcome</h2>
+            <h2 class="hide">Personal Business</h2>
             <figure class="lune-landing-content relative col-12 m0 flex-none">
               <!-- Chair image -->
               <!-- WebP image -->
@@ -3464,20 +3464,19 @@
               <span
                 class="lune-landing-title-middle lune-anim-move-up flex justify-between z1 absolute caps h3 md-h1"
                 aria-hidden="true"
-                ><span>แ</span><span>ก้</span><span>ว</span><span>สี</span
-                ><span>ด</span><span>า</span></span
+                ><span>ธุ</span><span>ร</span><span>กิ</span><span>จ</span><span>ส่</span><span>ว</span><span>น</span><span>ตั</span><span>ว</span></span
               >
               <!-- LU- -->
               <span
                 class="lune-landing-title-top lune-anim-move-up absolute inline-block z1 caps"
                 aria-hidden="true"
-                >kaew</span
+                >Personal</span
               >
               <!-- -NE -->
               <span
                 class="lune-landing-title-bottom lune-anim-move-up absolute inline-block z1 caps"
                 aria-hidden="true"
-                >seeda</span
+                >Business</span
               >
             </figure>
             <!-- Dictover CTA -->
@@ -3510,7 +3509,7 @@
             class="lune-landing-section-wrapper absolute top-0 left-0 bottom-0 right-0 flex flex-column items-center justify-between"
           >
             <!-- Used by screen reader / document outline, not visible -->
-            <h2 class="hide">ยินดีต้อนรับ</h2>
+            <h2 class="hide">Business Owner</h2>
             <figure class="lune-landing-content relative col-12 m0 flex-none">
               <!-- Chair image -->
               <!-- WebP image -->
@@ -3541,19 +3540,19 @@
               <span
                 class="lune-landing-title-middle lune-anim-move-up flex justify-between z1 absolute caps h3 md-h1"
                 aria-hidden="true"
-                ><span>k</span><span>a</span><span>e</span><span>w</span><span>s</span><span>e</span><span>e</span><span>d</span><span>a</span></span
+                ><span>b</span><span>u</span><span>s</span><span>i</span><span>n</span><span>e</span><span>s</span><span>s</span></span
               >
               <!-- LU- -->
               <span
                 class="lune-landing-title-top lune-anim-move-up absolute inline-block z1 caps"
                 aria-hidden="true"
-                >แก้ว</span
+                >สุขภาพ</span
               >
               <!-- -NE -->
               <span
                 class="lune-landing-title-bottom lune-anim-move-up absolute inline-block z1 caps"
                 aria-hidden="true"
-                >สีดา</span
+                >ความเป็นอยู่ที่ดี</span
               >
             </figure>
             <!-- Dictover CTA -->
