--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <html ⚡="">
   <head>
     <meta charset="utf-8" />
-    <title>Kaewseeda | แก้วสีดา</title>
+    <title>Kaewseeda | แก้วสีดา | Business Partnership | ธุรกิจส่วนตัว | สุขภาพและความเป็นอยู่ที่ดี</title>
+    <meta name="description" content="สุขภาพและความเป็นอยู่ที่ดี | มีประโยชน์แถมประหยัดและประสิทธิภาพสูงพร้อมความปลอดภัยในสินค้ารับประกันความพึงพอใจ">
+    <meta name="robots" content="noindex, nofollow">
     <link rel="canonical" href="https://www.ampstart.com/templates/lune.amp" />
     <meta name="viewport" content="width=device-width" />
     <meta name="amp-google-client-id-api" content="googleanalytics" />
@@ -3472,7 +3474,7 @@
             </figure>
             <!-- Dictover CTA -->
             <a
-              href="https://pages.lazada.co.th/wow/i/th/marketing/ams_lp?hybrid=1&campaignId=111"
+              href="https://www.lazada.co.th/shop/kaewseeda"
               class="ampstart-btn ampstart-btn-secondary relative inline-block overflow-hidden caps h7 center lune-anim-move-up z2 lune-theme-light lune-transparent"
             >
               <span class="relative block z3">Lazada</span>
