--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="utf-8" />
     <title>Kaewseeda | แก้วสีดา | Business Partnership | ธุรกิจส่วนตัว | สุขภาพและความเป็นอยู่ที่ดี</title>
     <meta name="description" content="สุขภาพและความเป็นอยู่ที่ดี | มีประโยชน์แถมประหยัดและประสิทธิภาพสูงพร้อมความปลอดภัยในสินค้ารับประกันความพึงพอใจ">
+    <meta name="keywords" content="หางาน, ธุรกิจส่วนตัว, Business, Health, Wellness, lazada, shopee, amway, jd central">
+    <meta name="author" content="Nunthachai Thailand">
     <meta name="robots" content="noindex, nofollow">
     <link rel="canonical" href="https://www.ampstart.com/templates/lune.amp" />
     <meta name="viewport" content="width=device-width" />
