--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="canonical" href="https://www.ampstart.com/templates/lune.amp" />
     <meta name="viewport" content="width=device-width" />
     <meta name="amp-google-client-id-api" content="googleanalytics" />
+    <meta name="google-site-verification" content="teMIopV2rUk3rF_huCJTX5Qvudg6cswJ8pKuvErhyys">
 
     <script async="" src="https://cdn.ampproject.org/v0.js"></script>
 
