--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="หางาน, ธุรกิจส่วนตัว, นิวทริไลท์, บอดี้คีย์, โปรตีน, น้ำมันปลา, อีสปริง, แอทโมสเฟียร์ สกาย, อาร์ทิสทรี, Business, Health, Wellness, lazada, shopee, nutrilite, bodykey, plant protein, fish oil, espring, atmosphere, artistry, amway, jd central">
     <meta name="author" content="Nunthachai Thailand">
     <meta name="robots" content="noindex, nofollow">
-    <link rel="canonical" href="https://www.ampstart.com/templates/lune.amp" />
+    <link rel="canonical" href="https://www.kaewseeda.com" />
     <meta name="viewport" content="width=device-width" />
     <meta name="amp-google-client-id-api" content="googleanalytics" />
     <meta name="google-site-verification" content="teMIopV2rUk3rF_huCJTX5Qvudg6cswJ8pKuvErhyys">
