--- a/index.html
+++ b/index.html
@@ -3548,7 +3548,7 @@
               <span
                 class="lune-landing-title-bottom lune-anim-move-up absolute inline-block z1 caps"
                 aria-hidden="true"
-                >ความเป็นอยู่ที่ดี</span
+                >อยู่ที่ดีขึ้น</span
               >
             </figure>
             <!-- Dictover CTA -->
